<resources>
    <string name="app_name">Taskhuman</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="like_description">Like</string>

    <string name="like_label">Added</string>
    <string name="unlike_label">Removed</string>
    <string name="liked_label">Added</string>
    <string name="unliked_label">Add</string>
    <string name="share_label">Share</string>
    <string name="title_activity_bottom_nav_main">BottomNavMainActivity</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_discover">Discover</string>
    <string name="title_reconnect">Reconnect</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_messages">Messages</string>
    <string name="title_blogs">Blogs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_ntaskhuman">Explore\nTaskHuman</string>
    <string name="grow_your_leadership_skills">Grow Your Leadership Skills</string>
    <string name="_1_1_guidance_from_live_specialists">1:1 guidance from <font color='#2C8F77'>live</font> specialists</string>
    <string name="settings">Settings</string>
    <string name="dummy_time">Now -  11:00am</string>

</resources>