<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.taskhuman.ui.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_reconnect"
        android:name="com.example.taskhuman.ui.ReconnectFragment"
        android:label="@string/title_reconnect"
        tools:layout="@layout/fragment_reconnect" />

    <fragment
        android:id="@+id/navigation_bookings"
        android:name="com.example.taskhuman.ui.BookingsFragment"
        android:label="@string/title_bookings"
        tools:layout="@layout/fragment_bookings" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.taskhuman.ui.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_blogs"
        android:name="com.example.taskhuman.ui.BlogsFragment"
        android:label="@string/title_blogs"
        tools:layout="@layout/fragment_blogs" />
</navigation>