<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context=".ui.DiscoverFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18dp"
            android:text="@string/_1_1_guidance_from_live_specialists"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topCl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_11dp"
            android:layout_marginTop="@dimen/_14dp"
            android:background="@drawable/round_rect_shape_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCompanyLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/task_human_logo" />

            <TextView
                android:id="@+id/tvCompanyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_7dp"
                android:layout_marginStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_33dp"
                android:text="@string/explore_ntaskhuman"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sp"
                app:layout_constraintBottom_toBottomOf="@+id/ivCompanyLogo"
                app:layout_constraintStart_toEndOf="@+id/ivCompanyLogo"
                app:layout_constraintTop_toTopOf="@+id/ivCompanyLogo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_11dp"
            android:layout_marginTop="@dimen/_23dp"
            android:text="@string/grow_your_leadership_skills"
            android:textColor="@color/color_grey_head"
            android:textSize="@dimen/_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topCl" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            android:layout_marginHorizontal="@dimen/_7dp"
            android:layout_marginTop="@dimen/_17dp"
            android:layout_marginBottom="@dimen/_5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_41dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/search_red_sticker" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>